--- a/toolkit/components/thumbnails/test/Makefile.in
+++ b/toolkit/components/thumbnails/test/Makefile.in
@@ -3,8 +3,6 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
 MOCHITEST_BROWSER_FILES := \
-	browser_thumbnails_background.js \
-	browser_thumbnails_background_crash.js \
 	browser_thumbnails_capture.js \
 	browser_thumbnails_expiration.js \
 	browser_thumbnails_privacy.js \
@@ -14,13 +12,20 @@ MOCHITEST_BROWSER_FILES := \
 	browser_thumbnails_bug726727.js \
 	browser_thumbnails_bug727765.js \
 	browser_thumbnails_bug818225.js \
-	browser_thumbnails_update.js \
 	head.js \
 	background_red.html \
 	background_red_scroll.html \
 	background_red_redirect.sjs \
 	privacy_cache_control.sjs \
+	$(NULL)
+
+ifndef RELEASE_BUILD
+MOCHITEST_BROWSER_FILES += \
+	browser_thumbnails_background.js \
+	browser_thumbnails_background_crash.js \
+	browser_thumbnails_update.js \
 	thumbnails_background.sjs \
 	thumbnails_crash_content_helper.js \
 	thumbnails_update.sjs \
 	$(NULL)
+endif
