Bug 912590 - Part 1: Update base tests to use new Robotium 4.2 APIs for View fetching. r=gbrown

--- a/mobile/android/base/tests/BaseTest.java.in
+++ b/mobile/android/base/tests/BaseTest.java.in
@@ -196,7 +196,8 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
      */
     protected final void focusUrlBar() {
         // Click on the browser toolbar to enter editing mode
-        mDriver.findElement(mActivity, BROWSER_TOOLBAR_ID).click();
+        final View toolbarView = mSolo.getView(BROWSER_TOOLBAR_ID);
+        mSolo.clickOnView(toolbarView);
 
         // Wait for highlighed text to gain focus
         boolean success = waitForTest(new BooleanTest() {
@@ -222,7 +223,7 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
         mActions.sendKeys(url);
 
         // Get the URL text from the URL bar EditText view
-        String urlBarText = mDriver.findElement(mActivity, URL_EDIT_TEXT_ID).getText();
+        String urlBarText = ((EditText) mSolo.getView(URL_EDIT_TEXT_ID)).getText().toString();
         mAsserter.is(url, urlBarText, "URL typed properly");
     }
 
@@ -272,32 +273,30 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
     }
 
     public final void verifyUrl(String url) {
-        Element urlEditText = mDriver.findElement(mActivity, URL_EDIT_TEXT_ID);
+        final EditText urlEditText = (EditText) mSolo.getView(URL_EDIT_TEXT_ID);
         String urlBarText = null;
         if (urlEditText != null) {
             // wait for a short time for the expected text, in case there is a delay
             // in updating the view
-            waitForTest(new VerifyUrlTest(urlEditText, url), VERIFY_URL_TIMEOUT);
-            urlBarText = urlEditText.getText();
+            waitForTest(new VerifyTextViewText(urlEditText, url), VERIFY_URL_TIMEOUT);
+            urlBarText = urlEditText.getText().toString();
+
         }
         mAsserter.is(urlBarText, url, "Browser toolbar URL stayed the same");
     }
 
-    class VerifyUrlTest implements BooleanTest {
-        private Element mUrlEditText;
-        private String mUrl;
-        public VerifyUrlTest(Element urlEditText, String url) {
-            mUrlEditText = urlEditText;
-            mUrl = url;
+    class VerifyTextViewText implements BooleanTest {
+        private TextView mTextView;
+        private String mExpected;
+        public VerifyTextViewText(TextView textView, String expected) {
+            mTextView = textView;
+            mExpected = expected;
         }
 
         @Override
         public boolean test() {
-            String urlbarText = mUrlEditText.getText();
-            if (urlbarText.equals(mUrl)) {
-                return true;
-            }
-            return false;
+            String textValue = mTextView.getText().toString();
+            return mExpected.equals(textValue);
         }
     }
 
@@ -485,8 +484,7 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
     }
 
     public final void verifyHomePagerHidden() {
-        final Element homePagerElement = mDriver.findElement(mActivity, "home_pager");
-        final View homePagerView = mActivity.findViewById(homePagerElement.getId());
+        final View homePagerView = mSolo.getView("home_pager");
 
         boolean rc = waitForTest(new BooleanTest() {
             @Override
@@ -501,33 +499,15 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
     }
 
     public final void verifyPageTitle(String title) {
-        Element urlBarTitle = mDriver.findElement(getActivity(), URL_BAR_TITLE_ID);
+        final TextView urlBarTitle = (TextView) mSolo.getView(URL_BAR_TITLE_ID);
         String pageTitle = null;
         if (urlBarTitle != null) {
             // Wait for the title to make sure it has been displayed in case the view
             // does not update fast enough
-            waitForTest(new VerifyTitle(urlBarTitle, title), MAX_WAIT_MS);
-            pageTitle = urlBarTitle.getText();
+            waitForTest(new VerifyTextViewText(urlBarTitle, title), MAX_WAIT_MS);
+            pageTitle = urlBarTitle.getText().toString();
         }
         mAsserter.is(pageTitle, title, "Page title is correct");
-    }
-
-    class VerifyTitle implements BooleanTest {
-        private Element mUrlBarTitle;
-        private String mTitle;
-        public VerifyTitle(Element urlBarTitle, String title) {
-            mUrlBarTitle = urlBarTitle;
-            mTitle = title;
-        }
-
-        @Override
-        public boolean test() {
-            String pageTitle = mUrlBarTitle.getText();
-            if (pageTitle.equals(mTitle)) {
-                return true;
-            }
-            return false;
-        }
     }
 
     public final void verifyTabCount(int expectedTabCount) {
@@ -560,18 +540,12 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
     }
 
     public void addTab(String url) {
-        Element tabs = null;
-        Element addTab = null;
-        Activity activity = getActivity();
-        tabs = mDriver.findElement(activity, "tabs");
-        addTab = mDriver.findElement(activity, "add_tab");
-        final int addTabId = addTab.getId();
-        mAsserter.ok(tabs.click(), "checking that tabs clicked", "tabs element clicked");
+        mSolo.clickOnView(mSolo.getView("tabs"));
         // wait for addTab to appear (this is usually immediate)
         boolean success = waitForTest(new BooleanTest() {
             @Override
             public boolean test() {
-                View addTabView = getActivity().findViewById(addTabId);
+                View addTabView = mSolo.getView("add_tab");
                 if (addTabView == null) {
                     return false;
                 }
@@ -579,7 +553,8 @@ abstract class BaseTest extends ActivityInstrumentationTestCase2<Activity> {
             }
         }, MAX_WAIT_MS);
         mAsserter.ok(success, "waiting for add tab view", "add tab view available");
-        mAsserter.ok(addTab.click(), "checking that add_tab clicked", "add_tab element clicked");
+        final View addTabView = mSolo.getView("add_tab");
+        mSolo.clickOnView(mSolo.getView("add_tab"));
 
         // Adding a new tab opens about:home, so now we just need to load the url in it.
         inputAndLoadUrl(url);
