Bug 896565 - Update testAwesomebarSwipes for new about:home (r=margaret)

--- a/mobile/android/base/tests/robocop.ini
+++ b/mobile/android/base/tests/robocop.ini
@@ -1,5 +1,5 @@
 [testAwesomebar]
-# [testAwesomebarSwipes] # disabled on fig - bug 880060
+[testAboutHomeSwipes]
 # [testBookmark] # disabled on fig - bug 880060
 [testBookmarklets]
 [testBookmarkKeyword]
