--- a/mobile/android/base/tests/robocop.ini
+++ b/mobile/android/base/tests/robocop.ini
@@ -1,5 +1,5 @@
 [testAwesomebar]
-[testAboutHomeSwipes]
+# [testAwesomebarSwipes] # disabled on fig - bug 880060
 # [testBookmark] # disabled on fig - bug 880060
 [testBookmarklets]
 [testBookmarkKeyword]
