Backed out changeset c24ba14732cd (bug 907734) for Android bustage.

--- a/mobile/android/base/tests/testBookmarkKeyword.java.in
+++ b/mobile/android/base/tests/testBookmarkKeyword.java.in
@@ -13,23 +13,24 @@ public class testBookmarkKeyword extends AboutHomeTest {
     public void testBookmarkKeyword() {
         blockForGeckoReady();
 
-        final String url = getAbsoluteUrl(StringHelper.ROBOCOP_BLANK_PAGE_01_URL);
+        final String url = getAbsoluteUrl("/robocop/robocop_blank_01.html");
+        final String title = "Browser Blank Page 01";
         final String keyword = "testkeyword";
 
         // Add a bookmark, and update it to have a keyword.
-        mDatabaseHelper.addOrUpdateMobileBookmark(StringHelper.ROBOCOP_BLANK_PAGE_01_TITLE, url);
-        mDatabaseHelper.updateBookmark(url, StringHelper.ROBOCOP_BLANK_PAGE_01_TITLE, keyword);
+        addOrUpdateMobileBookmark(title, url);
+        updateBookmark(url, title, keyword);
 
         // Enter the keyword in the urlbar.
         inputAndLoadUrl(keyword);
 
         // Wait for the page to load.
-        waitForText(StringHelper.ROBOCOP_BLANK_PAGE_01_TITLE);
+        waitForText(title);
 
         // Make sure the title of the page appeared.
-        verifyPageTitle(StringHelper.ROBOCOP_BLANK_PAGE_01_TITLE);
+        verifyPageTitle(title);
 
         // Delete the bookmark to clean up.
-        mDatabaseHelper.deleteBookmark(url);
+        deleteBookmark(url);
     }
 }
