--- a/content/base/test/unit/xpcshell.ini
+++ b/content/base/test/unit/xpcshell.ini
@@ -28,5 +28,6 @@ support-files =
 [test_error_codes.js]
 run-sequentially = Hardcoded 4444 port.
 [test_thirdpartyutil.js]
+[test_xhr_document.js]
 [test_xhr_standalone.js]
 [test_xmlserializer.js]
