--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -361,6 +361,11 @@ distclean::
 
 INCLUDES	+= -I$(srcdir)
 
+ifneq (,$(filter WINNT,$(OS_ARCH)))
+# _CRT_RAND_S must be #defined before #including stdlib.h to get rand_s()
+DEFINES         += -D_CRT_RAND_S
+endif
+
 ifneq ($(findstring -L,$(NSPR_LIBS)),)
 NSPR_STATIC_PATH = $(subst -L,,$(findstring -L,$(NSPR_LIBS)))
 else
