--- a/content/media/test/mochitest.ini
+++ b/content/media/test/mochitest.ini
@@ -481,7 +481,7 @@ skip-if = os == "win" || (buildapp=='b2g'&&debug) || (toolkit == 'gonk' && !debu
 [test_media_selection.html]
 skip-if = os == "win" || (toolkit == 'gonk' && !debug) # See bug 897843, b2g(timed out)
 [test_seek.html]
-skip-if = toolkit == 'android' || (toolkit == 'gonk' && !debug) # See bug 832678, 795271, and 857424 # android(bug 845162) androidx86(bug 845162)
+skip-if = buildapp == 'b2g' || toolkit == 'android' # Intermittent test failures in bug 1023564 and bug 981153
 
 # The tests below contain backend-specific tests. Write backend independent
 # tests rather than adding to this list.
