Bug 1072320 - Intermittent browser_action_searchengine.js | Test timed out - expected PASS. r=Mossop,mak

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -102,7 +102,9 @@ skip-if = os == "linux" # Bug 924307
 skip-if = e10s # Bug ?????? - no about:home support yet
 [browser_aboutSyncProgress.js]
 [browser_action_keyword.js]
+skip-if = os == "linux" # Bug 1073339 - Investigate autocomplete test unreliability on Linux 
 [browser_action_searchengine.js]
+skip-if = os == "linux" # Bug 1073339 - Investigate autocomplete test unreliability on Linux 
 [browser_addKeywordSearch.js]
 skip-if = e10s
 [browser_alltabslistener.js]
