Bug 962874 - Enable content/media mochitests on b2g desktop builds. r=cpearce

--- a/content/media/test/mochitest.ini
+++ b/content/media/test/mochitest.ini
@@ -22,7 +22,7 @@
 # do ok(true, "Type not supported") and stop the test.
 
 [DEFAULT]
-skip-if = buildapp == 'mulet' || (buildapp == 'b2g' && toolkit != 'gonk') # b2g-desktop(bug 918299)
+skip-if = buildapp == 'mulet'
 support-files =
   320x240.ogv
   320x240.ogv^headers^
@@ -299,6 +299,7 @@ support-files =
   wavedata_u8.wav^headers^
 
 [test_access_control.html]
+skip-if = buildapp == 'b2g' && toolkit != 'gonk' # crash on b2g-desktop
 [test_aspectratio_mp4.html]
 [test_audio1.html]
 [test_audio2.html]
