--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -507,3 +507,4 @@ skip-if = e10s # Bug 1068360 - [e10s] Mixed content blocker doorhanger doesn't w
 [browser_blockHPKP.js]
 skip-if = e10s # bug ?????? - test directly manipulates content (content.document.getElementById)
 [browser_mcb_redirect.js]
+skip-if = e10s # bug 1084504 - [e10s] Mixed content detection does not take redirection into account
