Bug 1090929 - Enable the variables-view-filter tests;r=mratcliffe

--- a/browser/devtools/debugger/test/browser.ini
+++ b/browser/devtools/debugger/test/browser.ini
@@ -474,15 +474,15 @@ skip-if = e10s
 [browser_dbg_variables-view-edit-watch.js]
 skip-if = e10s
 [browser_dbg_variables-view-filter-01.js]
-skip-if = e10s
+skip-if = e10s && debug
 [browser_dbg_variables-view-filter-02.js]
-skip-if = e10s
+skip-if = e10s && debug
 [browser_dbg_variables-view-filter-03.js]
-skip-if = e10s
+skip-if = e10s && debug
 [browser_dbg_variables-view-filter-04.js]
-skip-if = e10s
+skip-if = e10s && debug
 [browser_dbg_variables-view-filter-05.js]
-skip-if = e10s
+skip-if = e10s && debug
 [browser_dbg_variables-view-filter-pref.js]
 skip-if = e10s
 [browser_dbg_variables-view-filter-searchbox.js]
