--- a/configure.in
+++ b/configure.in
@@ -9007,7 +9007,7 @@ if test "$ACCESSIBILITY" -a "$MOZ_ENABLE_GTK" ; then
     AC_DEFINE_UNQUOTED(ATK_REV_VERSION, $ATK_REV_VERSION)
 fi
 
-if test -z "$RELEASE_BUILD" -a -z "$NIGHTLY_BUILD"; then
+if test -n "$MOZ_DEV_EDITION"; then
     AC_DEFINE(MOZ_DEV_EDITION)
 fi
 
