--- a/xpcom/tests/Makefile.in
+++ b/xpcom/tests/Makefile.in
@@ -11,12 +11,16 @@ NO_INTERFACES_MANIFEST = 1
 include $(topsrcdir)/config/rules.mk
 
 ifneq (,$(SIMPLE_PROGRAMS))
-libs::
-	$(INSTALL) $(SIMPLE_PROGRAMS) $(DEPTH)/_tests/xpcshell/$(relativesrcdir)/unit
+test_programs_FILES = $(SIMPLE_PROGRAMS)
+test_programs_DEST := $(DEPTH)/_tests/xpcshell/$(relativesrcdir)/unit
+test_programs_TARGET := misc
+INSTALL_TARGETS += test_programs
 endif
 
-libs::
-	$(INSTALL) $(DIST)/bin/components/xpcomtest.xpt $(DEPTH)/_tests/xpcshell/$(relativesrcdir)/unit
+xpcomtest_FILES := $(DIST)/bin/components/xpcomtest.xpt
+xpcomtest_DEST := $(DEPTH)/_tests/xpcshell/$(relativesrcdir)/unit
+xpcomtest_TARGET := misc
+INSTALL_TARGETS += xpcomtest
 
 ifeq (,$(filter-out WINNT, $(HOST_OS_ARCH)))
 getnativepath = $(call normalizepath,$(1))
