Bug 287107 - make Components.returnCode be the xpcom nsresult if set by js components. r=bholley

--- a/js/xpconnect/tests/unit/xpcshell.ini
+++ b/js/xpconnect/tests/unit/xpcshell.ini
@@ -85,6 +85,7 @@ fail-if = os == "android"
 [test_sandbox_metadata.js]
 [test_exportFunction.js]
 [test_promise.js]
+[test_returncode.js]
 [test_textDecoder.js]
 [test_url.js]
 [test_URLSearchParams.js]
