--- a/js/xpconnect/tests/unit/xpcshell.ini
+++ b/js/xpconnect/tests/unit/xpcshell.ini
@@ -86,6 +86,7 @@ fail-if = os == "android"
 [test_exportFunction.js]
 [test_promise.js]
 [test_returncode.js]
+skip-if = os == "android" # native test components aren't available on Android
 [test_textDecoder.js]
 [test_url.js]
 [test_URLSearchParams.js]
