Bug 1113619 - Abort on lifecycle event handler errors. r=baku
Folded:
Handle install event listener errors and fail installation
Activate handler runtime errors should lead to activation failure.

--- a/dom/workers/test/serviceworkers/mochitest.ini
+++ b/dom/workers/test/serviceworkers/mochitest.ini
@@ -5,7 +5,9 @@ support-files =
   worker2.js
   worker3.js
   parse_error_worker.js
+  activate_event_error_worker.js
   install_event_worker.js
+  install_event_error_worker.js
   simpleregister/index.html
   simpleregister/ready.html
   controller/index.html
