--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -409,11 +409,6 @@ DOMInterfaces = {
     },
 },
 
-'ExtendableEvent': {
-    'headerFile': 'mozilla/dom/ServiceWorkerEvents.h',
-    'nativeType': 'mozilla::dom::workers::ExtendableEvent',
-},
-
 'FileList': {
     'headerFile': 'mozilla/dom/File.h',
 },
@@ -609,6 +604,11 @@ DOMInterfaces = {
 {
     'workers': True,
 }],
+
+'InstallPhaseEvent': {
+    'headerFile': 'ServiceWorkerEvents.h',
+    'nativeType': 'mozilla::dom::workers::InstallPhaseEvent',
+},
 
 'InstallEvent': {
     'headerFile': 'ServiceWorkerEvents.h',
