--- a/testing/web-platform/meta/web-animations/keyframe-effect/getComputedTiming-progress.html.ini
+++ b/testing/web-platform/meta/web-animations/keyframe-effect/getComputedTiming-progress.html.ini
@@ -1,3 +1,3 @@
-[effect-easing.html]
+[getComputedTiming-progress.html]
   type: testharness
   disabled: https://bugzilla.mozilla.org/show_bug.cgi?id=1245748
