--- a/dom/push/test/mochitest.ini
+++ b/dom/push/test/mochitest.ini
@@ -2,11 +2,11 @@
 subsuite = push
 support-files =
   worker.js
-  push-server.sjs
   frame.html
   webpush.js
   lifetime_worker.js
   test_utils.js
+  mockpushserviceparent.js
 skip-if = os == "android" || toolkit == "gonk"
 
 [test_has_permissions.html]
