Bug 1164432 - Update test_try_registering_offline_disabled.html to use mock push server. r=kit

--- a/dom/push/test/mochitest.ini
+++ b/dom/push/test/mochitest.ini
@@ -18,6 +18,5 @@ skip-if = os == "android" || toolkit == "gonk"
 [test_multiple_register_different_scope.html]
 [test_subscription_change.html]
 [test_data.html]
-# Disabled for too many intermittent failures (bug 1164432)
-#  [test_try_registering_offline_disabled.html]
+[test_try_registering_offline_disabled.html]
 [test_serviceworker_lifetime.html]
