Bug 1249447 - Prevent using CPOW and wait for indexedDB setup/clear with tasks. r=mratcliffe, a=test-only
--HG--
extra : source : 95656a398e8f7754d358f1f0250a2e8069f5db47

--- a/devtools/server/tests/browser/browser.ini
+++ b/devtools/server/tests/browser/browser.ini
@@ -20,6 +20,7 @@ support-files =
   timeline-iframe-child.html
   timeline-iframe-parent.html
   director-script-target.html
+  storage-helpers.js
 
 [browser_animation_emitMutations.js]
 [browser_animation_getFrames.js]
