--- a/devtools/server/tests/unit/xpcshell.ini
+++ b/devtools/server/tests/unit/xpcshell.ini
@@ -184,6 +184,7 @@ reason = bug 820380
 [test_sourcemaps-12.js]
 [test_sourcemaps-13.js]
 [test_sourcemaps-16.js]
+[test_sourcemaps-17.js]
 [test_objectgrips-01.js]
 [test_objectgrips-02.js]
 [test_objectgrips-03.js]
