Bug 1258344 - Fix customizemode re-entering issues when switching tabs. r=jaws, a=ritu
MozReview-Commit-ID: 3KONzSxf8g9

--HG--
extra : source : 7d3eb3e1e13536cf2bc0814727348097f2352b39

--- a/browser/components/customizableui/test/browser.ini
+++ b/browser/components/customizableui/test/browser.ini
@@ -144,3 +144,4 @@ skip-if = os == "mac"
 [browser_1161838_inserted_new_default_buttons.js]
 [browser_bootstrapped_custom_toolbar.js]
 [browser_panel_toggle.js]
+[browser_switch_to_customize_mode.js]
