--- a/testing/web-platform/meta/web-animations/animation-effect-timing/duration.html.ini
+++ b/testing/web-platform/meta/web-animations/animation-effect-timing/duration.html.ini
@@ -1,3 +1,18 @@
 [duration.html]
   type: testharness
-  disabled: https://bugzilla.mozilla.org/show_bug.cgi?id=1245748
+  [set duration auto]
+    expected: FAIL
+    bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1237173
+
+  [set duration -100]
+    expected: FAIL
+    bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1237173
+
+  [set duration abc]
+    expected: FAIL
+    bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1237173
+
+  [set duration string 100]
+    expected: FAIL
+    bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1237173
+
