Bug 1251043 - Test form submission blocked by CSP (r=francois) a=ritu
MozReview-Commit-ID: AT0TohMif1r

--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -156,6 +156,7 @@ support-files =
   file_multipart_testserver.sjs
   file_fontloader.sjs
   file_fontloader.woff
+  file_form_action_server.sjs
 
 [test_base-uri.html]
 [test_blob_data_schemes.html]
@@ -236,3 +237,4 @@ skip-if = toolkit == 'android' #investigate in bug 1250814
 [test_docwrite_meta.html]
 [test_multipartchannel.html]
 [test_fontloader.html]
+[test_form_action_blocks_url.html]
