--- a/layout/style/test/mochitest.ini
+++ b/layout/style/test/mochitest.ini
@@ -9,6 +9,7 @@ support-files =
   chrome/match.png
   chrome/mismatch.png
   descriptor_database.js
+  display_mode_reflow_iframe.html
   empty.html
   media_queries_dynamic_xbl_binding.xml
   media_queries_dynamic_xbl_iframe.html
