--- a/dom/html/test/browser.ini
+++ b/dom/html/test/browser.ini
@@ -5,6 +5,7 @@ support-files =
   file_bug649778.html
   file_bug649778.html^headers^
   file_fullscreen-api-keys.html
+  file_content_contextmenu.html
   head.js
 
 [browser_bug592641.js]
@@ -19,3 +20,5 @@ support-files =
 [browser_DOMDocElementInserted.js]
 [browser_fullscreen-api-keys.js]
 [browser_fullscreen-contextmenu-esc.js]
+tags = fullscreen
+[browser_content_contextmenu_userinput.js]
