Bug 1257486 - Annotate global memory status in the crash reporter for child process; r=bsmedberg, a=ritu
MozReview-Commit-ID: ExVZS3aAp41

--HG--
extra : source : 4f662b15f40b63818e4c0bf707c434f82321deb4

--- a/toolkit/crashreporter/test/unit_ipc/xpcshell.ini
+++ b/toolkit/crashreporter/test/unit_ipc/xpcshell.ini
@@ -5,3 +5,5 @@ skip-if = toolkit == 'android' || toolkit == 'gonk'
 
 [test_content_annotation.js]
 [test_content_exception_time_annotation.js]
+[test_content_oom_annotation_windows.js]
+skip-if = os != 'win'
