Bug 890913 - Parser.jsm: support SpreadExpression r=vporof

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -337,6 +337,7 @@ skip-if = e10s && debug
 skip-if = e10s && debug
 [browser_dbg_parser-11.js]
 [browser_dbg_parser-function-defaults.js]
+[browser_dbg_parser-spread-expression.js]
 [browser_dbg_parser-template-strings.js]
 skip-if = e10s && debug
 [browser_dbg_pause-exceptions-01.js]
