Bug 1262224 - Re-enable some disabled serviceworker tests on Win e10s debug and disable test_fetch_event.html for intermittent leaks. a=test-only
--HG--
extra : source : 1129184ec2dd240ff8084b2a51ef55afd2245bd8
extra : amend_source : 2492dcdb62940eba954e05e9e194b6bf4028d12b

--- a/dom/workers/test/serviceworkers/mochitest.ini
+++ b/dom/workers/test/serviceworkers/mochitest.ini
@@ -206,17 +206,28 @@ support-files =
 [test_close.html]
 [test_controller.html]
 [test_cross_origin_url_after_redirect.html]
+[test_csp_upgrade-insecure_intercept.html]
 [test_empty_serviceworker.html]
+[test_escapedSlashes.html]
+[test_eventsource_intercept.html]
 [test_eval_allowed.html]
 [test_fetch_event.html]
+skip-if = (debug && e10s) # Bug 1262224
+[test_file_blob_response.html]
+[test_file_blob_upload.html]
 [test_force_refresh.html]
 [test_gzip_redirect.html]
+[test_hsts_upgrade_intercept.html]
 [test_https_fetch.html]
 [test_https_fetch_cloned_response.html]
 [test_https_origin_after_redirect.html]
 [test_https_origin_after_redirect_cached.html]
 [test_https_synth_fetch_from_cached_sw.html]
+[test_imagecache.html]
+[test_imagecache_max_age.html]
 [test_importscript.html]
+[test_importscript_mixedcontent.html]
+tags = mcb
 [test_install_event.html]
 [test_installation_simple.html]
 [test_match_all.html]
@@ -224,6 +235,14 @@ support-files =
 [test_match_all_client_id.html]
 [test_match_all_client_properties.html]
 [test_navigator.html]
+[test_not_intercept_plugin.html]
+[test_notification_constructor_error.html]
+[test_notification_get.html]
+[test_notificationclick.html]
+[test_notificationclick_focus.html]
+skip-if = (toolkit == "android" && debug) # Bug 1259338
+[test_opaque_intercept.html]
+[test_openWindow.html]
 [test_origin_after_redirect.html]
 [test_origin_after_redirect_cached.html]
 [test_origin_after_redirect_to_https.html]
@@ -259,44 +278,20 @@ support-files =
 [test_request_context_worker.html]
 [test_request_context_xhr.html]
 [test_request_context_xslt.html]
-[test_scopes.html]
 [test_sandbox_intercept.html]
-skip-if = e10s && debug && os == 'win'
-[test_notificationclick.html]
-skip-if = e10s && debug && os == 'win'
-[test_notificationclick_focus.html]
-skip-if = toolkit == "android" || toolkit == "gonk" || (e10s && debug && os == 'win')
-[test_notification_constructor_error.html]
-skip-if = e10s && debug && os == 'win'
-[test_notification_get.html]
-skip-if = e10s && debug && os == 'win'
 [test_sanitize.html]
 [test_sanitize_domain.html]
+[test_scopes.html]
 [test_service_worker_allowed.html]
+[test_serviceworker_header.html]
 [test_serviceworker_interfaces.html]
 [test_serviceworker_not_sharedworker.html]
 [test_skip_waiting.html]
 [test_strict_mode_warning.html]
 [test_third_party_iframes.html]
 [test_unregister.html]
+[test_unresolved_fetch_interception.html]
 [test_workerUnregister.html]
 [test_workerUpdate.html]
 [test_workerupdatefoundevent.html]
-[test_opaque_intercept.html]
 [test_xslt.html]
-skip-if = e10s && debug && os == 'win'
-[test_escapedSlashes.html]
-[test_eventsource_intercept.html]
-[test_not_intercept_plugin.html]
-[test_file_blob_upload.html]
-[test_unresolved_fetch_interception.html]
-[test_hsts_upgrade_intercept.html]
-[test_csp_upgrade-insecure_intercept.html]
-[test_serviceworker_header.html]
-[test_openWindow.html]
-skip-if = toolkit == "android" || toolkit == "gonk" || (e10s && debug && os == 'win')
-[test_imagecache.html]
-[test_imagecache_max_age.html]
-[test_importscript_mixedcontent.html]
-tags = mcb
-[test_file_blob_response.html]
