Bug 1243378 - Enable the browser_devices_get_user_media_about_urls.js test for e10s, r=mconley.

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -320,7 +320,7 @@ skip-if = !datareporting
 [browser_devices_get_user_media.js]
 skip-if = buildapp == 'mulet' || (os == "linux" && debug) # linux: bug 976544
 [browser_devices_get_user_media_about_urls.js]
-skip-if = e10s # Bug 1071623
+skip-if = e10s && debug
 [browser_devices_get_user_media_in_frame.js]
 [browser_discovery.js]
 [browser_double_close_tab.js]
