--- a/dom/workers/test/serviceworkers/mochitest.ini
+++ b/dom/workers/test/serviceworkers/mochitest.ini
@@ -243,6 +243,7 @@ tags = mcb
 skip-if = (toolkit == "android" && debug) # Bug 1259338
 [test_opaque_intercept.html]
 [test_openWindow.html]
+skip-if = toolkit == "android" # Bug 1172872
 [test_origin_after_redirect.html]
 [test_origin_after_redirect_cached.html]
 [test_origin_after_redirect_to_https.html]
