Bug 1262269. Re-enable some imagelib tests that are passing. a=tests-only

--- a/image/test/mochitest/chrome.ini
+++ b/image/test/mochitest/chrome.ini
@@ -2,17 +2,15 @@
 skip-if = buildapp == 'b2g' || os == 'android'
 support-files =
   animationPolling.js
+  animated-gif.gif
   iframe.html
   imgutils.js
   ref-iframe.html
 
 [test_animation.html]
-disabled = bug 1100497
 [test_animation2.html]
-disabled = bug 1101415
 [test_bug415761.html]
 skip-if = os != "win" || os_version == "6.2"
 support-files =
   bug415761.ico
 [test_undisplayed_iframe.html]
-disabled = bug 1060869
