--- a/toolkit/components/extensions/test/mochitest/chrome.ini
+++ b/toolkit/components/extensions/test/mochitest/chrome.ini
@@ -5,6 +5,7 @@ support-files =
   interruptible.sjs
   file_sample.html
 
+[test_chrome_ext_background_debug_global.html]
 [test_chrome_ext_downloads_download.html]
 [test_chrome_ext_downloads_misc.html]
 [test_chrome_ext_downloads_search.html]
