--- a/toolkit/content/tests/chrome/chrome.ini
+++ b/toolkit/content/tests/chrome/chrome.ini
@@ -68,6 +68,7 @@ skip-if = buildapp == 'mulet'
 [test_bug331215.xul]
 [test_bug360220.xul]
 [test_bug360437.xul]
+skip-if = os == 'linux'
 [test_bug365773.xul]
 [test_bug366992.xul]
 [test_bug382990.xul]
