Bug 1292522 - Add test for bug 1292522 - the same domain host with different port numbers must be treated as the same domain. r=smaug a=lizzard
--HG--
extra : source : af1ae450676a05584c4be462900552b4b07996c5
extra : intermediate-source : e6bbc936ae4ab1c5880c5ea3ad48839c748b5262

--- a/dom/html/test/mochitest.ini
+++ b/dom/html/test/mochitest.ini
@@ -36,6 +36,8 @@ support-files =
   bug499092.html
   bug499092.xml
   bug514856_iframe.html
+  bug1292522_iframe.html
+  bug1292522_page.html
   ../../plugins/test/mochitest/plugin-utils.js
   test_non-ascii-cookie.html^headers^
   file_bug209275_1.html
@@ -620,3 +622,4 @@ skip-if = buildapp == 'mulet' || buildapp == 'b2g' || toolkit == 'android'
 [test_bug1250401.html]
 [test_bug1260664.html]
 [test_allowMedia.html]
+[test_bug1292522_same_domain_with_different_port_number.html]
