--- a/dom/animation/test/mochitest.ini
+++ b/dom/animation/test/mochitest.ini
@@ -41,6 +41,7 @@ support-files =
   mozilla/file_document-timeline-origin-time-range.html
   mozilla/file_hide_and_show.html
   mozilla/file_partial_keyframes.html
+  mozilla/file_set-easing.html
   mozilla/file_transform_limits.html
   style/file_animation-seeking-with-current-time.html
   style/file_animation-seeking-with-start-time.html
