Bug 1304142 - Pocket a/b test updates. r=Gijs, a=ritu, l10n=flod
MozReview-Commit-ID: ChBRc81QQ7Y

--HG--
extra : source : 016f24cec86ee68e1323a9d350a9788519d3f175
extra : intermediate-source : fecb52aedeefd7a92931fdc6827efc47279d3707

--- a/.eslintignore
+++ b/.eslintignore
@@ -72,6 +72,8 @@ browser/components/shell/**
 browser/components/tabview/**
 browser/components/translation/**
 browser/extensions/pdfjs/**
+# generated or library files in pocket
+browser/extensions/pocket/content/panels/js/tmpl.js
 browser/extensions/pocket/content/panels/js/vendor/**
 browser/locales/**
 
