Bug 1289761 - Disable test_capture.html on Win64 debug because due to being permafail. a=test-only
--HG--
extra : rebase_source : 396ab99004c211a1d24e75acdbdd6c4b97e50fe7

--- a/dom/canvas/test/webgl-mochitest/mochitest.ini
+++ b/dom/canvas/test/webgl-mochitest/mochitest.ini
@@ -57,6 +57,7 @@ fail-if = (os == 'b2g')
 support-files = ../captureStream_common.js
 # Even though we use ../ here, in the test HTML, we need to omit this. Sub-CWD relative
 # paths are fine, but they locate the file and dump it in the current directory.
+skip-if = ((os == "win") && debug && (bits == 64)) # Bug 1289761 - Permafail on Win64 debug
 [test_cubemap_must_be_square.html]
 [test_depth_tex_lazy_clear.html]
 [test_draw.html]
